--- a/locale/lang-en_US.json
+++ b/locale/lang-en_US.json
@@ -1,58 +1,57 @@
 {
-  "OPEN_INTERNET_FOR_EVERYONE": "Open Internet for Everyone",
-  "DOWNLOAD_LANTERN": "Download Lantern",
-  "DOWNLOAD_LANTERN_MOBILE": "Send me the Download Link",
-  "LANTERN_DESCRIPTION_1": "Lantern is a free desktop application that delivers fast, reliable and secure access to the open Internet.",
-  "HOW_DOES_LANTERN_WORK": "How does Lantern work?",
-  "LANTERN_DESCRIPTION_2": "Lantern is a free desktop application that delivers fast, reliable and secure access to the open Internet.",
-  "FEATURE_1": "Fast",
-  "FEATURE_2": "Easy to Use",
-  "FEATURE_3": "Small Download",
-  "FEATURE_4": "Secure",
-  "QUESTIONS_1": "Questions?",
-  "QUESTIONS_2": "Head to our <a href='/faq.html'>FAQ Page</a>",
-  "PRESS": "Read about Lantern",
-  "NEWSLETTER_1": "Sign up for our Newsletter",
-  "NEWSLETTER_2": "Join",
-  "FIRETWEET": "Check out <a href='https://firetweet.io/'>FireTweet</a> Our new Twitter app for Android",
-  "FOOTER_1": "Follow us",
-  "FOOTER_2": "Contribute",
-  "FAQ": "Frequently Asked Questions",
-  "FAQ_DESCRIPTION": "This page provides answers to common questions about Lantern. Check out our <a href='https://github.com/getlantern/lantern/wiki/%5Bdevelopers%5D-Questions-and-Answers'>developers FAQ</a> for more technical information.",
-  "QUESTION_1": "Who built Lantern?",
-  "ANSWER_1_A": "Lantern is built by the <a href='http://bravenewsoftware.org'>Brave New Software Project, Inc,</a> a registered 501(c)3 non-profit dedicated to creating software that tackles tough global challenges.",
-  "ANSWER_1_B": "Brave New Software’s founder and Lantern lead developer, Adam Fisk, was formerly a lead developer of the peer-to-peer file sharing services LimeWire and LittleShoot.",
-  "ANSWER_1_C": "While working on those P2P architectures, Adam realized they could be useful in providing unfiltered Internet access.",
-  "QUESTION_2": "How does Lantern work?",
-  "ANSWER_2_A": "Lantern was built to give users fast access to the blocked Internet.",
-  "ANSWER_2_B": "Lantern automatically detects whether or not a site is blocked and then accesses the blocked site either through our own servers or through Lantern users running as access points in the uncensored world.",
-  "ANSWER_2_C": "If a site is unblocked, Lantern gets out of the way, and your browser accesses it directly to give you the fastest possible access.",
-  "QUESTION_3": "What makes Lantern unique?",
-  "ANSWER_3_A": "Lantern is unique in that it uses a variety of techniques to stay unblocked around the world, falling back to other approaches if some of those techniques become blocked.",
-  "ANSWER_3_B": "Those techniques include centralized and sophisticated peer-to-peer architectures.",
-  "ANSWER_3_C": "Usability and user feedback are also integral parts of Lantern, with new releases incorporating suggestions and addressing concerns.",
-  "QUESTION_4": "Can I trust Lantern?",
-  "ANSWER_4_A": "Lantern is open, anyone can check our <a href='https://github.com/getlantern/lantern'>source code</a> and see how everything works and make an informed decision.",
-  "ANSWER_4_B": "We welcome experts to audit our system and would appreciate any feedback (security@getlantern.org).",
-  "QUESTION_5": "Can anyone view my traffic when I’m using Lantern?",
-  "ANSWER_5_A": "Lantern encrypts all of your traffic when you are accessing a blocked site, but Lantern does not change traffic to unblocked sites in any way.",
-  "ANSWER_5_B": "This means a network observer, such as a censoring government or an ISP, cannot read your traffic to blocked sites.",
-  "ANSWER_5_C": "Lantern users acting as access points can see the website you’re accessing and where you’re accessing it from, but the actual content you are reading from or posting to that site is not visible to them because it is encrypted over HTTPS.",
-  "ANSWER_5_D": "Lantern only sends HTTPS traffic to Lantern users acting as access points.",
-  "QUESTION_6": "What user information does Lantern collect?",
-  "ANSWER_6_A": "Lantern allows you to provide the Lantern team with useful information and analytics that will help us improve the Lantern program.",
-  "ANSWER_6_B": "You can change this option in your Lantern settings.",
-  "ANSWER_6_C": "If you choose to send Lantern this data we will only use it for improving the Lantern service so that we can continue to offer better service for you and others.",
-  "QUESTION_7": "Does Lantern give me anonymity online?",
-  "ANSWER_7_A": "Lantern is not an anonymity tool.",
-  "ANSWER_7_B": "Lantern was built for fast and open Internet access.",
-  "ANSWER_7_C": "If you feel you need to be anonymous online (if you are posting something you think could bring legal action against you, for example) we recommend using Tor.",
-  "ANSWER_7_D": "Otherwise, Lantern will give you faster access to blocked sites.",
-  "QUESTION_8": "How do I know if Lantern is working?",
-  "ANSWER_8_A": "Once you download and install Lantern, the Lantern icon will appear in the system tray on the lower right of your screen on Windows and in the menu bar at the top of your screen on OSX.",
-  "ANSWER_8_B": "As long as the icon is is there, it means Lantern is running and that you can access blocked sites in any browser automatically.",
-  "ANSWER_8_C": "If you ever wish to stop Lantern, you can do so in the menu that appears when you click on the Lantern icon in the system tray or menu bar.",
-  "QUESTION_9": "Where do I go if I have more questions?",
-  "ANSWER_9_A": "If you have more questions, please connect with us on <a href='https://www.facebook.com/getlantern?ref=hl'>Facebook</a> or visit our <a href='https://groups.google.com/forum/#!forum/lantern-users-en'>User Forum</a>."
-
+    "OPEN_INTERNET_FOR_EVERYONE": "اینترنت بدون فیلتر برای همه",
+    "DOWNLOAD_LANTERN": "‫دانلود لنترن",
+    "DOWNLOAD_LANTERN_MOBILE": "لینک دانلود را برای من بفرست",
+    "LANTERN_DESCRIPTION_1": "لنترن دسکتاپ، راهی برای دسترسی سریع، رایگان و امن به اینترنت بازاست",
+    "HOW_DOES_LANTERN_WORK": "لنترن چگونه کار می کند؟",
+    "LANTERN_DESCRIPTION_2": "لنترن  یک پراکسی است که به شما امکان دسترسی به وبسایت های مسدود شده را می دهد.",
+    "FEATURE_1": " سریع",
+    "FEATURE_2": " راحتی استفاده",
+    "FEATURE_3": "حجم دانلود پایین",
+    "FEATURE_4": "امن",
+    "QUESTIONS_1": "پرسش ها",
+    "QUESTIONS_2": "به<a href='PLACE LINK TO FAQ PAGE HERE'> صفحه پرسش های متداول ما</a> سر بزنید",
+    "PRESS": "درباره لنترن",
+    "NEWSLETTER_1": "عضوخبرنامه شوید",
+    "NEWSLETTER_2": "ثبت نام",
+    "FIRETWEET": "به<a href='https://firetweet.io/'> فایر‌توییت</a> سربزنید اپلیکیشن جدید ما برای اندویید",
+    "FOOTER_1": "ما را دنبال کنید",
+    "FOOTER_2": "کمک",
+    "FAQ": "پاسخ به سوالات متداول",
+    "FAQ_DESCRIPTION": "در این صفحه به سوالات شما درباره لنترن پاسخ داده‌ایم. برای اطلاعات فنی بیشتر به صفحه <a href='https://github.com/getlantern/lantern/wiki/%5Bdevelopers%5D-Questions-and-Answers'> سوال و جواب برنامه نویسان </a> ما مراجعه کنید.",
+    "QUESTION_1": "لنترن محصول کیست؟",
+    "ANSWER_1_A": "لنترن محصول <a href='http://bravenewsoftware.org'> بریو نیو سافتور پراجکت است،</a> یک سازمان غیرانتفاعی با اجازه ثبت ۵۰۱(سی)۳ که هدفش تولید نرم افزارهایی است که چالش‌های سخت جهانی را حل کند",
+    "ANSWER_1_B": "آدام فیسک، موسس این شرکت و برنامه نویس اصلی لنترن است که قبلا مدیر برنامه‌نویسی دو شرکت اشتراک گذاری فایل لایم وایر و لیتل شوت بود. ",
+    "ANSWER_1_C": "زمانی که آدام روی طراحی ساختار اشتراک ‌گذاری فرد به فرد کار می‌کرد متوجه شد که می‌تواند از آن برای دسترسی بدون فیلتر به اینترنت هم استفاده کند.",
+    "QUESTION_2": "لنترن چگونه کار می کند؟\n",
+    "ANSWER_2_A": "لنترن با هدف دسترسی سریع کاربران به اینترنت فیلترشده ساخته شد.",
+    "ANSWER_2_B": "لنترن به صورت اتوماتیک تشخیص می‌دهد که یک وبسایت فیلتر شده یا نه، سپس از طریق سرورهای خود ما و یا از طریق کاربرانی که در دنیای بی سانسور هستند، به وبسایت فیلترشده وصل می‌شود.",
+    "ANSWER_2_C": " اگر یک وبسایت فیلتر نباشد، لنترن کنار می‌رود و مرورگر شما در سریع‌ترین حالت ممکن به وبسایت وصل می‌شود.",
+    "QUESTION_3": "خصوصیت ویژه لنترن چیست؟",
+    "ANSWER_3_A": "ویژگی لنترن این است که از روش‌های متعددی برای دور زدن فیلتر در سراسر دنیا استفاده می‌کند و اگر یکی از این روش‌ها بسته شود، از راه‌های دیگر استفاده می‌کند.",
+    "ANSWER_3_B": " این روش‌ها شامل راه‌های متمرکز و همچنین فرد به فرد است.",
+    "ANSWER_3_C": "یکی دیگر از خصوصیات لنترن، تلاش برای قابل استفاده بودن و استفاده از نظرات کاربران است و در هر نسخه جدید، به پیشنهادها و نگرانی‌های کاربران توجه می‌شود.",
+    "QUESTION_4": "آیا می‌توانم به لنترن اعتماد کنم؟",
+    "ANSWER_4_A": "لنترن یک برنامه منبع باز است و هر کسی می‌تواند<a href='https://github.com/getlantern/lantern'> کدهای مرجع</a> ما را ببینند و نحوه کار ما را بررسی کند و با اطلاعات بیشتر تصمیم بگیرد.",
+    "ANSWER_4_B": "ما از کارشناسان دعوت می‌کنیم که به ساختار ما نظارت کنند و از هر پیشنهادی استقبال می‌کنیم (آدرس ایمیل تیم فنی ما security@getlantern.org).",
+    "QUESTION_5": "وقتی از لنترن استفاده می‌کنم چه کسی فعالیت من را می‌بیند؟",
+    "ANSWER_5_A": "لنترن تمام عبور و مرور اینترنتی شما را هنگام دسترسی به یک سایت فیلترشده، رمزنگاری می‌کند. اما دسترسی شما به وبسایت‌های فیلتر نشده را به هیچ شکل تغییر نمی‌دهد.",
+    "ANSWER_5_B": " یعنی این که اگر کسی شبکه را نظاره کند، مثلا دولتی که سانسور می‌کند یا یک آی اس پی، نمی‌تواند عبور و مرور شما به وبسایت‌های فیلترشده را ببیند.",
+    "ANSWER_5_C": ". کاربران لنترن که به عنوان نقاط دسترسی در شبکه فعال هستند، می‌توانند وبسایت‌هایی را که شما بازدید می‌کنید و نقاطی را که از آن وصل می‌شوید ببینند اما محتوای مطالبی را که شما در آن وبسایت می‌بینید یا می‌نویسید را نمی‌بینند چرا که این محتوا با کد اچ تی تی پی اس رمزنگاری می‌شود",
+    "ANSWER_5_D": " لنترن فقط ترافیک اچ تی تی پی اس را به کاربرانی که به عنوان نقاط دسترسی فعال هستند می‌فرستد.",
+    "QUESTION_6": "لنترن چه اطلاعاتی از کاربر جمع‌ آوری می‌کند؟",
+    "ANSWER_6_A": "لنترن به شما اجازه می‌دهد که به تیم لنترن اطلاعات کاربری و آنالیزهای مفیدی را بفرستید که به ما کمک می‌کند برنامه لنترن را تقویت کنیم. ",
+    "ANSWER_6_B": " شما می‌توانید این گزینه را در تنظیمات برنامه لنترن عوض کنید.",
+    "ANSWER_6_C": "اگر تصمیم گرفتید این اطلاعات را برای لنترن بفرستید، ما از این اطلاعات فقط برای بهبود خدمات لنترن استفاده می‌کنیم تا بتوانیم خدمات بهتری به شما و دیگر کاربران ارائه کنیم.",
+    "QUESTION_7": "آیا من با استفاده از لنترن در اینترنت ناشناس می‌شوم؟",
+    "ANSWER_7_A": "لنترن ابزار ناشناس شدن نیست.",
+    "ANSWER_7_B": " لنترن برای دسترسی سریع و آزاد به اینترنت ساخته شده است.",
+    "ANSWER_7_C": "اگر احساس می‌کنید باید در فضای اینترنت ناشناس باشید (مثلا اگر مطالبی می‌نویسید که فکر می‌کنید ممکن است عواقب قانونی علیه شما داشته باشد) توصیه می‌کنیم از تور استفاده کنید.",
+    "ANSWER_7_D": "در غیر این صورت، لنترن دسترسی سریع‌تری به وبسایت‌های فیلترشده می‌دهد.",
+    "QUESTION_8": "از کجا بدانم لنترن کار می‌کند؟\n",
+    "ANSWER_8_A": "وقتی لنترن را دانلود و اینستال کردید، علامت لنترن در منوی سیستم در سمت راست پایین صفحه ویندوز شما و یا در منوی بالای صفحه شما در اپل دیده می‌شود.",
+    "ANSWER_8_B": " تا زمانی که این علامت آنجاست، به این معنی است که لنترن در حال کار است و شما می‌توانید به صورت اتوماتیک به وبسایت‌های فیلترشده دسترسی پیدا کنید.",
+    "ANSWER_8_C": " اگر می‌خواهید لنترن را متوقف کنید، روی علامت لنترن کلیک کنید و در منویی که باز می‌شود آن را متوقف کنید.",
+    "QUESTION_9": "برای اطلاعات بیشتر به کجا مراجعه کنم؟",
+    "ANSWER_9_A": "اگر سوالات بیشتری دارید لطفا به<a href='https://www.facebook.com/getlantern?ref=hl'> صفحه فیس بوک</a> یا <a href='https://groups.google.com/forum/#!forum/lantern-users-en'>گروه کاربری ما</a> سر بزنید. برای سوالات فنی لطفا به بخش سوال و جواب برنامه‌نویسان در گروه برنامه‌نویسی ما مراجعه کنید."
 }
